--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ body {
     background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+.search-btn {
+    width: 100px !important;
+}
+
 /* loggin */
 .margin-top-center {
     margin-top: 20vh;
