--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
 /* first */
 body {
-    background: #ECE9E6;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #FFFFFF, rgb(243, 242, 240));  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #FFFFFF, rgb(243, 241, 239)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: rgb(240, 240, 240);  /* fallback for old browsers */
 }
 
 /* nav */
@@ -36,6 +34,6 @@ body {
 }
 
 .card-link {
-    margin-left: 90%;
+    margin-left: 86%;
     text-decoration: underline #1a1a1a;
 }
